# circle_dance

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  TODO.md  pyproject.toml
circle_dance/: config.py
circle_dance/audio/: __init__.py
circle_dance/audio/process/: __init__.py  note_durations.py  note_onsets.py
circle_dance/audio/read/: __init__.py  callbacks.py  file.py  stream.py
circle_dance/audio/split/: __init__.py
circle_dance/cli/: __init__.py  entrypoint.py
circle_dance/cli/subcommands/: __init__.py  base.py  listen.py  play.py
circle_dance/game/: __init__.py  game.py
circle_dance/game/modules/: __init__.py  base.py  circular_sheet_file.py  circular_sheet_stream.py  music_player.py
circle_dance/visualize/: __init__.py  draw.py  drawable.py  types.py
circle_dance/visualize/circular_sheet/: __init__.py  canvas.py  config.py  note_pool.py  notes.py  pointer.py  sheet.py  utils.py
research/: ChromaChunkPerformance.ipynb  ChromaNormalization.ipynb
